[gd_scene load_steps=8 format=2]

[ext_resource path="res://scn_scenes/scn_ObjectBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/level_1/scr_obj_ShelfClock.gd" type="Script" id=2]
[ext_resource path="res://levels/0_UIother/cntrl_SoundsControl.tscn" type="PackedScene" id=3]
[ext_resource path="res://scn_experimental/scn_thisIsAGoodShrimpFrame.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/level_1/f0_sfx_lv01/sfx_shelf01.ogg" type="AudioStream" id=5]
[ext_resource path="res://levels/level_1/f0_sfx_lv01/sfx_shelfD.ogg" type="AudioStream" id=6]
[ext_resource path="res://sfx_audio/f0_sfx_pianochimes/sfx_pianochime_03_jazzyendpling.wav" type="AudioStream" id=7]

[node name="obj_ShelfClock" instance=ExtResource( 1 )]
script = ExtResource( 2 )
default_noise = ""
distorted_noise_player_active = true

[node name="sfx2D_object" parent="." index="1"]
stream = ExtResource( 5 )

[node name="sfx2D_distorted" parent="." index="2"]
stream = ExtResource( 6 )

[node name="sfx_discovered" parent="." index="3"]
stream = ExtResource( 7 )

[node name="AnimatedSprite" parent="." index="5"]
modulate = Color( 0.717647, 0.298039, 0.423529, 1 )
animation = "shelf"

[node name="Timer" parent="." index="6"]
wait_time = 1.0

[node name="SoundsControl" parent="." index="8" instance=ExtResource( 3 )]
margin_left = 353.788
margin_top = 168.555
margin_right = 393.788
margin_bottom = 208.555

[node name="ClockHand" parent="." index="9" instance=ExtResource( 4 )]
modulate = Color( 0.717647, 0.298039, 0.423529, 1 )
position = Vector2( -31.2302, -3.90884 )
scale = Vector2( 0.5, 0.5 )
